Added rest api security + jwt + basic api implementation + spring security rest config

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation "org.grails.plugins:gsp"
 
     implementation 'org.grails.plugins:spring-security-core:5.3.0'
+    implementation "org.grails.plugins:spring-security-rest:3.0.0.RC1"
 
     profile "org.grails.profiles:web"
     runtimeOnly "org.glassfish.web:el-impl:2.2.1-b05"
